# izci

./: .gitignore  CMakeLists.txt  README.md  configure
cmake/: config.h.in
flatfiles/: com.wps.Office.flatpakref  io.atom.Atom.flatpakref  io.lmms.LMMS.flatpakref  org.audacityteam.Audacity.flatpakref  org.libreoffice.LibreOffice.flatpakref  org.synfig.SynfigStudio.flatpakref
src/: installer.cpp  installer.h  main.cpp  window.cpp  window.h
